Modify App.css: make sure links are centered on small screens.

--- a/src/App.css
+++ b/src/App.css
@@ -65,7 +65,7 @@ header span {
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
-    width: 90%;
+    min-width: 90%;
     margin: 40px auto;
     gap: 40px;
 }
@@ -138,7 +138,7 @@ footer .Inner div {
 
     .LinkContainer {
         margin: 60px auto;
-        width: unset;
+        min-width: unset;
     }
 
     .Link div {
